sandbox/output
StringCalculator.java:11: error: <identifier> expected
       if(input.matches(".*,{2}".*)){  
                                 ^
StringCalculator.java:11: error: illegal start of expression
       if(input.matches(".*,{2}".*)){  
                                  ^
2 errors
